@@ -1,3 +1,12 @@
+1999-04-15  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mime-mc.el (mime-mc-insert-public-key, mime-mc-encrypt-region,
+	mime-mc-traditional-sign-region, mime-mc-sign-region,
+	mime-mc-snarf-keys, mime-mc-fetch-key, mime-mc-decrypt,
+	mime-mc-verify, mime-mc-comment): Use `mime-mc-symbol'.
+	(mime-mc-symbol): New macro.
+	(mime-mc-symbol-format-alist): New variable.
+
 1999-04-14  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mime-edit.el (mime-edit-insert-key): Prompt for user id if prefix
